reset size of 1rem in firefox and trying to stop article info from wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@-moz-document url-prefix() {
+  html {
+    font-size: 14px;
+  }
+}
+
 html {
   background-color: #eaeaea;
 }
